# sparse3d

./: .gitignore  0-start-here.ipynb  1-astronomy-demo.ipynb  404.html  CITATION.cff  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: black.yml  deploy-mkdocs.yml  draft-pdf.yaml  flake8.yml  lint.yml  pytest.yml  tests.yml
0-start-here/: index.html
1-astronomy-demo/: index.html
docs/: 0-start-here.md  1-astronomy-demo.ipynb  1-astronomy-demo.md  README.md  astronomy-demo.ipynb  roisparse3d.md  sparse3d.md
paper/: paper.bib  paper.md
roisparse3d/: index.html
scripts/: gen_scipy_matrix.py
search/: search_index.json
sparse3d/: index.html
src/sparse3d/: sparse3d.py
tests/: test_sparse3d.py
